syntax = "proto3";

option go_package = "./;db";

message DBTaskResponseStatus {
    int32 code = 1;
    string message = 2;
}

message DBFlowDTO {
    int64 id = 1;
    string flowName = 2;
    string statusAlias = 3;
    string bizId = 4;
    int32 status = 5;
    string operator = 6;
    int64 createTime = 7;
    int64 updateTime = 8;
    int64 deleteTime = 9;
}

message DBTaskDTO {
    int64 id = 1;
    int32 status = 2;
    string taskName = 3;
    string taskReturnType = 4;
    string bizId = 5;
    string parameters = 6;
    string result = 7;
    int64 createTime = 8;
    int64 updateTime = 9;
    int64 deleteTime = 10;
    int32 parentType = 11;
    string parentId = 12;
}

message DBCreateFlowRequest {
    DBFlowDTO flow = 1;
}

message DBCreateFlowResponse {
    DBTaskResponseStatus status = 1;
    DBFlowDTO flow = 2;
}

message DBCreateTaskRequest {
    DBTaskDTO task = 1;
}

message DBCreateTaskResponse {
    DBTaskResponseStatus status = 1;
    DBTaskDTO task = 2;
}

message DBFlowWithTaskDTO {
    DBFlowDTO flow = 1;
    repeated DBTaskDTO tasks = 2;
}

message DBUpdateFlowRequest {
    DBFlowWithTaskDTO flowWithTasks = 1;
}

message DBUpdateFlowResponse {
    DBTaskResponseStatus status = 1;
    DBFlowWithTaskDTO flowWithTasks = 2;
}

message DBUpdateTaskRequest {
    DBTaskDTO task = 1;
}

message DBUpdateTaskResponse {
    DBTaskResponseStatus status = 1;
    DBTaskDTO task = 2;
}

message DBLoadFlowRequest {
    int64 id = 1;
}

message DBLoadFlowResponse {
    DBTaskResponseStatus status = 1;
    DBFlowWithTaskDTO flowWithTasks = 2;
}

message DBLoadTaskRequest {
    uint64 id = 1;
}

message DBLoadTaskResponse {
    DBTaskResponseStatus status = 1;
    DBTaskDTO task = 2;
}

message DBQueryTaskRequest {
    string taskType = 1;
    string bizId = 2;
}

message DBQueryTaskResponse {
    DBTaskResponseStatus status = 1;
    repeated DBTaskDTO tasks = 2;
}

message DBListFlowsRequest {
    string bizId = 1;
    string keyword = 2;
    int64 status = 3;
    DBTaskPageDTO page = 4;
}

message DBListFlowsResponse {
    DBTaskResponseStatus status = 1;
    repeated DBFlowDTO flows = 2;
    DBTaskPageDTO page = 3;
}

message DBTaskPageDTO {
    int32 page = 1;
    int32 pageSize = 2;
    int32 total = 3;
}